--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,6 @@
     <form method="POST" action="" class="mt-2" autocomplete="off">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit" class="btn btn-success">crear cuenta</button>
+        <button type="submit" class="btn btn-success">Log in</button>
     </form>
 {% endblock %}
