--- a/templates/foro.html
+++ b/templates/foro.html
@@ -4,5 +4,34 @@
 
 
 {% block content %}
+    <div class="mt-3">
+        <div class="row mb-3">
+            <div class="col-3 offset-9">
+                <a href="{% url 'make_post' %}" class="btn btn-primary float-right">crear nuevo post</a>
+            </div>
+        </div>
+    </div>
+    {% if posts %}
+        {% for post in posts %}
+            {% if forloop.first %}<div class="row">{% endif %}
+            <div class="col-4">
+                <div class="card">
+                    <img class="card-img-top" height="180" src="{{ post.imagen.url }}"alt="{{ post.titulo }}">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ post.titulo }}</h5>
+                        <hr/>
+                        <h6 class="card-subtitle">Autor: {{ post.autor.username }} </h6>
+                        <p class="card-text">Categoria: {{ post.categoria.nombre }}</p>
+                    </div>
+                </div>
+            </div>
+            {% if forloop.counter|divisibleby:3 %}</div><div class="row">{% endif %}
+            {% if forloop.last%}</div>{% endif %}
+        {% endfor %}
+
+        {% include "paginacion.html"%}
+    {% else %}
+        <div class="alert alert-danger">no hay nada aqui</div>
+    {% endif %}
 
 {% endblock %}
