--- a/templates/foro.html
+++ b/templates/foro.html
@@ -23,6 +23,11 @@
                         <h6 class="card-subtitle">Autor: {{ post.autor.username }} </h6>
                         <p class="card-text">Categoria: {{ post.categoria.nombre }}</p>
                     </div>
+                    <div class="card-footer">
+                        {% if user == post.autor%}
+                            <a href="{% url 'delete_post' post.id %}" class="btn btn-danger">Delete post</a>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
             {% if forloop.counter|divisibleby:3 %}</div><div class="row">{% endif %}
