--- a/templates/paginacion.html
+++ b/templates/paginacion.html
@@ -9,7 +9,14 @@
                     <a class="page-link" href="?page={{ posts.previous_page_number }}">&laquo;</a>
                 </li>
             {% endif %}
-
+            
+            {% for pagina in paginas  %}
+                <li class="page-item" {% if pagina_actual == pagina %} active{% endif %}>
+                    <a class="page-link" href="?page={{ pagina }} ">{{ pagina }}</a>
+                </li>
+            {% endfor %}
+            
+            
             {% if posts.has_next  %}
                 <li class="page-item">
                     <a class="page-link" href="?page={{ posts.next_page_number }}">&raquo;</a>
