--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     </head>
     <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">Foro</a>
+        <a class="navbar-brand " href="/">Foro</a>
         <button
                 class="navbar-toggler"
                 type="button"
@@ -22,12 +22,8 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="foro">Foro</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
+
+            <ul class="navbar-nav m-lg-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="#">hola {{ user.username }}</a>
