--- a/templates/base.html
+++ b/templates/base.html
@@ -3,62 +3,63 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}{% endblock %} </title>
-        {% load static %}
-        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"/>
+        {% load bootstrap4 %}
+	    {% bootstrap_css %}
 
     </head>
     <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand " href="/">Foro</a>
-        <button
-                class="navbar-toggler"
-                type="button"
-                data-toggle="collapse"
-                data-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-        >
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+            <a class="navbar-brand " href="/">Foro</a>
+            <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#navbarNav"
+                    aria-controls="navbarNav"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
 
-            <ul class="navbar-nav m-lg-auto">
-                {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">hola {{ user.username }}</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logoutsession' %}">Logout</a>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">Log in</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'registro' %}">Registro</a>
-                    </li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>
-    <div class="container mt-3">
-        {% if messages %}
-            <div class="row mt-3 mb-3">
-                <div class="col-12">
-                    {% for message in messages %}
-                        <div class="alert alert-{{ message.tags }}">
-                            {{ message }}
-                        </div>
-                    {% endfor %}
-                </div>
+                <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">hola {{ user.username }}</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'logoutsession' %}">Logout</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'login' %}">Log in</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'registro' %}">Registro</a>
+                        </li>
+                    {% endif %}
+                </ul>
             </div>
-        {% endif %}
-        {% block content %}{% endblock %}
-    </div>
+        </nav>
+        <div class="container mt-3">
+           {% block header %}{% endblock %}
+        </div>
+        <div class="container mt-3">
+            {% if messages %}
+                <div class="row mt-3 mb-3">
+                    <div class="col-12">
+                        {% for message in messages %}
+                            <div class="alert alert-{{ message.tags }}">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            {% endif %}
+            {% block content %}{% endblock %}
 
-    <script src="{% static 'js/jquery-slim.min.js' %}"></script>
-    <script src="{% static 'js/popper.min.js' %}"></script>
-    <script src="{% static 'js/boostrap.min.js' %}"></script>
+        </div>
+        {% bootstrap_javascript jquery='full' %}
     </body>
 </html>
