--- a/templates/foro.html
+++ b/templates/foro.html
@@ -7,7 +7,7 @@
     <div class="mt-3">
         <div class="row mb-3">
             <div class="col-3 offset-9">
-                <a href="{% url 'make_post' %}" class="btn btn-primary float-right">crear nuevo post</a>
+                <a href="{% url 'make_post' %}" class="btn btn-primary float-right">Crear nuevo post</a>
             </div>
         </div>
     </div>
@@ -15,14 +15,17 @@
         {% for post in posts %}
             {% if forloop.first %}<div class="row">{% endif %}
             <div class="col-4">
-                <div class="card">
-                    <img class="card-img-top" height="180" src="{{ post.imagen.url }}"alt="{{ post.titulo }}">
-                    <div class="card-body">
+                <div class="card" >
+                    <a href="{% url 'show_post' post.id %}">
+                    <img  class="card-img-top" height="180" src="{{ post.imagen.url }}"alt="{{ post.titulo }}">
+                    <div class="card-body" >
+
                         <h5 class="card-title">{{ post.titulo }}</h5>
                         <hr/>
                         <h6 class="card-subtitle">Autor: {{ post.autor.username }} </h6>
                         <p class="card-text">Categoria: {{ post.categoria.nombre }}</p>
                     </div>
+                    </a>
                     <div class="card-footer">
                         {% if user == post.autor%}
                             <a href="{% url 'delete_post' post.id %}" class="btn btn-danger">Delete post</a>
