--- a/templates/registro.html
+++ b/templates/registro.html
@@ -6,6 +6,13 @@
     <form method="POST" action="" class="mt-2" autocomplete="off">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit" class="btn btn-success">crear cuenta</button>
+
+        <br>
+        <div class="d-flex justify-content-end">
+            <input type="reset" value="Cancelar" class="btn btn-secondary">
+            &nbsp;
+            <button type="submit" class="btn btn-success">crear cuenta</button>
+        </div>
+
     </form>
 {% endblock %}
